WIP: Fixing drill down expression building for AggregateQueryExecutor.