@@ -18,12 +18,13 @@
 package au.csiro.pathling.aggregate;
 
 import static au.csiro.pathling.utilities.Preconditions.checkArgument;
+import static au.csiro.pathling.utilities.Strings.parentheses;
 
-import au.csiro.pathling.fhirpath.annotations.NotImplemented;
-import au.csiro.pathling.fhirpath.collection.Collection;
+import au.csiro.pathling.fhirpath.Materializable;
 import au.csiro.pathling.utilities.Strings;
 import jakarta.annotation.Nonnull;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
@@ -42,10 +43,10 @@ public class DrillDownBuilder {
   private final List<Optional<Type>> labels;
 
   @Nonnull
-  private final List<Collection> groupings;
+  private final List<EvaluatedPath> groupings;
 
   @Nonnull
-  private final java.util.Collection<Collection> filters;
+  private final List<EvaluatedPath> filters;
 
   /**
    * @param labels The labels from the subject grouping
@@ -53,8 +54,8 @@ public class DrillDownBuilder {
    * @param filters The filters from the request
    */
   public DrillDownBuilder(@Nonnull final List<Optional<Type>> labels,
-      @Nonnull final List<Collection> groupings,
-      @Nonnull final java.util.Collection<Collection> filters) {
+      @Nonnull final List<EvaluatedPath> groupings,
+      @Nonnull final List<EvaluatedPath> filters) {
     checkArgument(labels.size() == groupings.size(), "Labels should be same size as groupings");
     this.labels = labels;
     this.groupings = groupings;
@@ -81,40 +82,38 @@ public class DrillDownBuilder {
 
     // If there is more than one expression, wrap each expression in parentheses before joining
     // together with Boolean AND operators.
-    return fhirPaths.size() > 0
+    return !fhirPaths.isEmpty()
            ? Optional.of(String.join(" and ", parenthesiseExpressions(fhirPaths)))
            : Optional.empty();
   }
 
-  @NotImplemented
-  private void addGroupings(final java.util.Collection<String> fhirPaths) {
-    // for (int i = 0; i < groupings.size(); i++) {
-    //   final Collection grouping = groupings.get(i);
-    //   final Optional<Type> label = labels.get(i);
-    //   if (label.isPresent()) {
-    //     final String literal = LiteralPath
-    //         .expressionFor(grouping.getDataset(), grouping.getIdColumn(), label.get());
-    //     final String equality = grouping.isSingular()
-    //                             ? " = "
-    //                             : " contains ";
-    //     // We need to add parentheses around the grouping expression, as some expressions will not
-    //     // play well with the equality or membership operator due to precedence.
-    //     final String expression = literal.equals("true") && grouping.isSingular()
-    //                               ? grouping.getExpression()
-    //                               : parentheses(grouping.getExpression()) + equality + literal;
-    //     fhirPaths.add(expression);
-    //   } else {
-    //     fhirPaths.add(parentheses(grouping.getExpression()) + ".empty()");
-    //   }
-    // }
+  private void addGroupings(@Nonnull final Collection<String> fhirPaths) {
+    for (int i = 0; i < groupings.size(); i++) {
+      final EvaluatedPath grouping = groupings.get(i);
+      final Optional<Type> label = labels.get(i);
+      if (label.isPresent()) {
+        System.out.println("label: " + label.get() + " grouping: " + label.get().getClass());
+        final String literal = ((Materializable<Type>) grouping.getResult()).toLiteral(label.get());
+        final String equality = grouping.isSingular()
+                                ? " = "
+                                : " contains ";
+        // We need to add parentheses around the grouping expression, as some expressions will not
+        // play well with the equality or membership operator due to precedence.
+        final String expression = literal.equals("true") && grouping.isSingular()
+                                  ? grouping.toExpression()
+                                  : parentheses(grouping.toExpression()) + equality + literal;
+        fhirPaths.add(expression);
+      } else {
+        fhirPaths.add(parentheses(grouping.toExpression()) + ".empty()");
+      }
+    }
   }
 
-  @NotImplemented
-  private void addFilters(@Nonnull final java.util.Collection<String> fhirPaths) {
-    // final List<String> filterExpressions = filters.stream()
-    //     .map(Collection::getExpression)
-    //     .collect(Collectors.toList());
-    // fhirPaths.addAll(filterExpressions);
+  private void addFilters(@Nonnull final Collection<String> fhirPaths) {
+    final List<String> filterExpressions = filters.stream()
+        .map(EvaluatedPath::toExpression)
+        .toList();
+    fhirPaths.addAll(filterExpressions);
   }
 
   @Nonnull
